Fix dropdown content clipping

--- a/src/main/webapp/assets/css/styles.css
+++ b/src/main/webapp/assets/css/styles.css
@@ -419,7 +419,7 @@ a:active {
 }
 
 .dropdown__content.show {
-    max-height: 100vh;
+    max-height: unset;
     opacity: 1;
 }
 
